<resources>
    <string name="app_name">Papagei App </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Manual</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Enter Lift Details here or Scan using Qrcode   </string>
    <string name="tag">Routine Lift  Maintenance Service   </string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Maintenance </string>
    <string name="re_type_password">more info </string>
    <string name="your_name">Full Info </string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tag1">  Lift Functionality Checklist   </string>
    <string name="tag2">  Scanned QrCode    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_call">Call</string>
    <string name="show_preview">Show Preview</string>
    <string name="Emergencycall">Emergency number </string>
    <string name="police">Police 117</string>
    <string name="fireservice">Fire Service 118</string>
    <string name="Ambulance">Ambulance 114</string>
    <string name="Developer">Serv24: info@serv24.com</string>
    <string name="hide_preview">Hide Preview</string>
    <string name="PORT">Choose a PORT</string>

    <string-array name="PORTS">
        <item>TLS</item>
        <item>UDP</item>
        <item>TCP</item>


    </string-array>


    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="title_activity_main4">MainActivity4</string>
</resources>